<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4F4"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="31sp"
        android:textColor="#DC1357"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_instruction"
        android:textSize="29sp"
        android:textColor="@color/secondaryText"
        android:textStyle="bold"
        android:paddingBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_using_threads"
        android:textSize="30sp"
        android:textColor="@color/primaryText"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/btnWithoutThread"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/press_me"
        android:backgroundTint="#DC1357"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_threads"
        android:textSize="30sp"
        android:textColor="@color/primaryText"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/btnWithThread"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/press_me"
        android:backgroundTint="#DC1357"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="24dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:contentDescription="@string/processing"/>
</LinearLayout>